Return Uni<String> for all operations